--- a/public/themes/default/assets/css/style.css
+++ b/public/themes/default/assets/css/style.css
@@ -9985,7 +9985,7 @@ html {
 
 .row {
     display: -ms-flexbox;
-    display: flex;
+    /* display: flex; */
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-right: -15px;
